[project]
name = "IoTuring"
version = "2023.11.1"
description = "Simple and powerful cross-platform script to control your pc and share statistics using communication protocols like MQTT and home control hubs like HomeAssistant."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "COPYING"}
keywords = ["iot","mqtt","monitor"]
authors = [
  {name = "richibrics", email = "riccardo.briccola.dev@gmail.com"},
  {name = "infeeeee", email = "gyetpet@mailbox.org"}
]
maintainers = [
  {name = "richibrics", email = "riccardo.briccola.dev@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Topic :: System :: Monitoring"
]

dependencies = [
  "paho-mqtt",
  "psutil",
  "PyYAML",
  "importlib_metadata",
  "requests",
  "PyObjC; sys_platform == 'darwin'",
  "IoTuring-applesmc; sys_platform == 'darwin'",
  "tinyWinToast; sys_platform == 'win32'"
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.urls]
homepage = "https://github.com/richibrics/IoTuring"
documentation = "https://github.com/richibrics/IoTuring"
repository = "https://github.com/richibrics/IoTuring"
changelog = "https://github.com/richibrics/IoTuring/releases"

[project.scripts]
IoTuring = "IoTuring:loop"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.package-data]
"*" = ["entities.yaml", "icon.png"]
