[project]
name = "IoTuring"
version = "2024.6.1"
description = "Your Windows, Linux, macOS computer as MQTT and HomeAssistant integration."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "COPYING"}
keywords = ["iot","mqtt","monitor","homeassistant"]
authors = [
  {name = "richibrics", email = "riccardo.briccola.dev@gmail.com"},
  {name = "infeeeee", email = "gyetpet@mailbox.org"}
]
maintainers = [
  {name = "richibrics", email = "riccardo.briccola.dev@gmail.com"},
  {name = "infeeeee", email = "gyetpet@mailbox.org"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Topic :: System :: Monitoring"
]

dependencies = [
  "paho-mqtt>=2.0.0",
  "psutil",
  "PyYAML",
    "requests",
  "InquirerPy",
  "PyObjC; sys_platform == 'darwin'",
  "IoTuring-applesmc; sys_platform == 'darwin'",
  "tinyWinToast; sys_platform == 'win32'"
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.urls]
homepage = "https://github.com/richibrics/IoTuring"
documentation = "https://github.com/richibrics/IoTuring"
repository = "https://github.com/richibrics/IoTuring"
changelog = "https://github.com/richibrics/IoTuring/releases"

[project.scripts]
IoTuring = "IoTuring:loop"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.package-data]
"*" = ["entities.yaml", "icon.png"]
